`quick-mention` - Fix comment header overlap (#8835)

--- a/source/features/quick-mention.css
+++ b/source/features/quick-mention.css
@@ -28,3 +28,8 @@
 .rgh-quick-mention:not(:hover, :focus) {
 	color: inherit;
 }
+
+/* Show tooltip on top of `sticky-comment-header` */
+.TimelineItem-avatar:has(.rgh-quick-mention) {
+	z-index: 4;
+}
